2002-06-19  Mikhael Goikhman  <migo@homemail.com>

	* configure.in:
	reworded supported feature listing, fixed the default xft detection
	* INSTALL.fvwm:
	added the "Supported Features" section

2002-06-19  olicha  <olivier.chapuis@free.fr>

	* fvwm/colorset.h:
	Removed not useful #define/#undef FVWM_COLORSET_PRIVATE

	* INSTALL.fvwm:
	Removed --enable-mulibyte and --disable-compound-text config option
	documentation. s/enable-xft/disable-xft/ and document --disable-xrender

	* configure.in:
	Xft is on by default no

	* libs/FlocaleCharset.c (*):
	* libs/FlocaleCharset.h:
	* libs/Ficonv.c (*):
	* libs/Ficonv.h:
	* libs/Flocale.c (*):
	* libs/Flocale.h:
	* libs/Fft.c (*):
	* libs/FftInterface.h:
	* libs/FBidi.c:
	* libs/FBidi.h:
	* fvwm/ewmh_names.c ():
	Some cleanup. Implemented StringEncoding= in font names. Fixed
	string encoding for xft fonts. Try to be more cleaver about defaults
	charsets. Improvement in the locale charset table.

	* fvwm/fvwm.1:
	Some documentation cleanup regarding Xft

2002-06-19  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/functions.c (find_func_type):
	fixed bug i introduced w/ last commit

	* fvwm/fvwm.c (Done):
	(StartupStuff):
	* fvwm/functions.c (functions_is_complex_function):
	* fvwm/builtins.c (CMD_DestroyFunc):
	(CMD_AddToFunc):
	(CMD_Plus):
	moved functions to functions.c
	general cleanup

	* fvwm/functable.c:
	* fvwm/functable.h:
	* fvwm/functions.h:
	* fvwm/commands.h:
	* fvwm/functions.c:
	moved some types and functions to other/new files

	* fvwm/functions.c:
	* fvwm/expand.c (expand_vars_extended):
	(expand_vars):
	functions moved to new file

	* fvwm/functions.c:
	reindented file

2002-06-18  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (CoerceEnterNotifyOnCurrentWindow):
	fixed colorurmap focus problem

	* **/*.[ch]:
	tabified all files and removed all trailing spaces

	* fvwm/move_resize.c (move_window_doit):
	* fvwm/virtual.c (CMD_MoveToDesk):
	MoveToPage and MoveToDesk no longer unstick windows
